--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "main": "src/index.ts",
     "scripts": {
-        "dev":"vitepress dev demo"
+        "dev": "vitepress dev demo"
     },
     "devDependencies": {
+        "ejs": "^3.1.8",
         "vitepress": "^1.0.0-alpha.4",
         "vue": "^3.2.37"
     }
